service.yml
apiVersion: v1
kind: Service
metadata:
  name: periodictableservice-argocd
  namespace: periodictableservice-argocd
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: periodictableservice-argocd
