ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: periodictableservice-argocd
  namespace: periodictableservice-argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: periodictableservice-argocd
                port:
                  number: 8080
  tls:
    - hosts:
        - localhost
      secretName: periodictableservice-argocd-secret
